--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="app"></div>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-72659574-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180874148-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -21,8 +21,17 @@
     }
     gtag('js', new Date());
 
-    gtag('config', 'UA-72659574-1');
-
+    gtag('config', 'UA-180874148-1');
   </script>
 
 </html>
+
+<!-- Global site tag (gtag.js) - Google Analytics
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-180874148-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'UA-180874148-1');
+</script> -->
